--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified\"",
-    "travis-deploy-once": "travis-deploy-once",
     "semantic-release": "semantic-release"
   },
   "repository": {
@@ -34,8 +33,8 @@
   },
   "devDependencies": {
     "cz-conventional-changelog": "^2.1.0",
-    "semantic-release": "^15.9.11",
-    "travis-deploy-once": "^5.0.4"
+    "semantic-release-cli": "^5.3.1",
+    "semantic-release": "^17.0.8"
   },
   "config": {
     "commitizen": {
